--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,12 @@ version = "0.2.1"
 authors = ["Vysakh Premkumar <vysakhpr218@gmail.com>"]
 edition = "2021"
 description = "trivia on the command line."
-license = "GPL-3.0"  
+license = "GPL-3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
 name = "pooi"
 path = "src/main.rs"
-
 
 [dependencies]
 anyhow = "~1.0"
@@ -20,6 +19,8 @@ comfy-table = "~5.0"
 crossterm = "~0.22"
 glob = "~0.3"
 scraper = "~0.12"
-ureq = { version = "~2.4", features = ["charset"] }
-whoami = "~1.2"
 
+# Specify compatible versions or features for ureq and rustls
+ureq = { version = "2.4.0", features = ["charset", "rustls"] }
+rustls = "0.21.0"
+whoami = "~1.2"
