--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,22 @@
 stages:
+  - mirror
   - build
   - deploy
 
 variables:
   RUST_VERSION: stable
+
+mirror:
+  stage: mirror
+  script:
+    - git clone --mirror https://gitlab.com/saliaku/pooi-kailas.git mirror_repo
+    - cd mirror_repo
+    - git remote set-url --push origin https://github.com/saliaku/pooi-kailas.git
+    - git fetch -p origin
+    - git push --mirror origin
+  only:
+    - master  # or specific branches you want to mirror
+
 
 build:
   stage: build
@@ -29,3 +42,5 @@ deploy:
       - pooi-$CI_COMMIT_REF_NAME.tar.gz
   only:
     - tags
+
+
