--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ variables:
 mirror:
   stage: mirror
   script:
-    - git clone --mirror https://gitlab.com/saliaku/pooi-kailas.git mirror_repo
+    - git clone --mirror git@gitlab.com:saliaku/pooi-kailas.git mirror_repo
     - cd mirror_repo
-    - git remote set-url --push origin https://github.com/saliaku/pooi-kailas.git
+    - git remote set-url --push origin git@github.com:saliaku/pooi-kailas.git
     - git fetch -p origin
     - git push --mirror origin
   only:
